--- a/src2/flowmaker.web/Views/Home/Privacy.cshtml
+++ b/src2/flowmaker.web/Views/Home/Privacy.cshtml
@@ -3,4 +3,13 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+@if (Model.IsAvailable)
+{
+    <h2 class="details-group-example">@Model.Title</h2>
+    <p>Use this page to detail your site's privacy policy.</p>
+}
+else
+{
+    <h2>I am lonely here, lets make something incredible today</h2>
+}
