deciding to use our own css

--- a/src2/flowmaker.web/Views/Home/Index.cshtml
+++ b/src2/flowmaker.web/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
 }
 else
 {
-    <h2>I am lonely here, lets make something incredible today</h2>
+    <h2>It is lonely here, lets make this site an incredible site today!</h2>
 }
 
