--- a/src2/flowmaker.web/Views/_ViewImports.cshtml
+++ b/src2/flowmaker.web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using flowmaker.web
 @using flowmaker.web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, flowmaker.components
