moved VM to components

--- a/src2/flowmaker.web/Views/Shared/Components/Drawer/Default.cshtml
+++ b/src2/flowmaker.web/Views/Shared/Components/Drawer/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model flowmaker.web.ViewModels.BaseViewModel;
+﻿@model             flowmaker.components.ViewModels.BaseViewModel;
 <div class="drawer">
     @if (Model.IsAvailable)
     {
