--- a/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
+++ b/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
@@ -1,4 +1,4 @@
-﻿@model flowmaker.web.ViewModels.BaseViewModel;
+﻿@model flowmaker.components.ViewModels.BaseViewModel;
 <!DOCTYPE html>
 <html lang="en">
 <head>
