--- a/src2/flowmaker.web/Views/Home/Index.cshtml
+++ b/src2/flowmaker.web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model flowmaker.web.ViewModels.HomepageViewModel;
+﻿@model             flowmaker.components.ViewModels.HomepageViewModel;
 @{
     ViewData["Title"] = Model.ProductTitle;
 }
