--- a/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
+++ b/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
@@ -1,18 +1,14 @@
-﻿@model flowmaker.components.ViewModels.BaseViewModel;
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@Model.ProductTitle</title>
+    <title>Model.ProductTitle</title>
     <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@shoelace-style/shoelace@2.0.0-beta.18/dist/shoelace/shoelace.css">-->
     <link rel="stylesheet" href="~/css/stylesheet.css" />
 </head>
 <body>
-    @if (Model.IsEditable)
-    {
-        <vc:drawer/>
-    }
+    <vc:drawer />
     @RenderBody()
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <!--<script type="module" src="https://cdn.jsdelivr.net/npm/@@shoelace-style/shoelace@2.0.0-beta.18/dist/shoelace/shoelace.esm.js"></script>-->
