Added a EF core data project

--- a/src2/flowmaker.web/Views/Shared/Error.cshtml
+++ b/src2/flowmaker.web/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model Flowmaker.Web.Models.ErrorViewModel
+﻿@model Flowmaker.Web.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
