added few more projects

--- a/src2/flowmaker.web/Views/Home/Index.cshtml
+++ b/src2/flowmaker.web/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
-﻿@model             Flowmaker.Web.ViewModels.Homepage;
+﻿@model             Flowmaker.ViewModels.Views.Homepage;
 <div>Welcome to the Homepage</div>
 
