--- a/src2/flowmaker.web/Views/Shared/Error.cshtml
+++ b/src2/flowmaker.web/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model Flowmaker.Web.ViewModels.ErrorViewModel
+﻿@model Flowmaker.ViewModels.Views.ErrorView
 @{
     ViewData["Title"] = "Error";
 }
