--- a/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
+++ b/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
@@ -1,4 +1,4 @@
-﻿@model Flowmaker.Web.ViewModels.ViewModelBase;
+﻿@model Flowmaker.ViewModels.ViewModelObject;
 <!DOCTYPE html>
 <html lang="en">
 <head>
