--- a/src2/flowmaker.web/Views/_ViewImports.cshtml
+++ b/src2/flowmaker.web/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Flowmaker.Web
-@using Flowmaker.Data.Entities
+@using Flowmaker.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Flowmaker.Web
