added passing VM to components

--- a/src2/flowmaker.web/Views/Shared/Components/Drawer/Default.cshtml
+++ b/src2/flowmaker.web/Views/Shared/Components/Drawer/Default.cshtml
@@ -1,9 +1,10 @@
-﻿@model             Flowmaker.ViewModels.Components.Drawer;
+﻿@model Flowmaker.ViewModels.Components.DrawerVm;
 @{ 
 
 }
 <div class="drawer">
     <div class="drawer-panel">
+        @Model.Environment.ProductTitle
         <vc:login />
     </div>
 </div>
