--- a/src2/flowmaker.web/Views/Home/Privacy.cshtml
+++ b/src2/flowmaker.web/Views/Home/Privacy.cshtml
@@ -1,2 +1,2 @@
-﻿@model              Flowmaker.ViewModels.Views.Privacy;
+﻿@model              Flowmaker.ViewModels.Views.PrivacyVm;
 <div>Use this page to detail your site's privacy policy for your @Model.Environment.WorkspaceTitle</div>
