--- a/src2/flowmaker.web/Views/Home/Index.cshtml
+++ b/src2/flowmaker.web/Views/Home/Index.cshtml
@@ -1,3 +1,2 @@
-﻿@model             Flowmaker.ViewModels.Views.HomepageVm;
-<div>Welcome to the Homepage</div>
-
+﻿@model Flowmaker.ViewModels.Views.HomepageVm;
+<div>Welcome to the @Model.Environment.Title</div>  
