Catch All Route

--- a/src2/flowmaker.web/Views/Home/Index.cshtml
+++ b/src2/flowmaker.web/Views/Home/Index.cshtml
@@ -1,2 +1,4 @@
 ﻿@model Flowmaker.ViewModels.Views.HomepageVm;
-<div>Welcome to the @Model.Environment.Title</div>  
+<vc:header />
+<div>Welcome to the @Model.Environment.Title</div>
+<vc:footer />
