added 404 and middleware to look for flow

--- a/src2/flowmaker.web/Views/Home/Index.cshtml
+++ b/src2/flowmaker.web/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Flowmaker.ViewModels.Views.HomepageVm;
 <vc:header />
 <div>Welcome to the @Model.Environment.Title</div>
+<h1>@Model.RequestRoute</h1>
+<h2>@Model.FlowTitle</h2>
 <vc:footer />
