--- a/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
+++ b/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@shoelace-style/shoelace@2.0.0-beta.18/dist/shoelace/shoelace.css">
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@@shoelace-style/shoelace@2.0.0-beta.18/dist/shoelace/shoelace.esm.js"></script>
     <title>@Model.Environment.WorkspaceTitle</title>
     <link rel="stylesheet" href="~/css/stylesheet.css" />
 </head>
@@ -33,4 +35,3 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
-
