Reviewing what to send between small VMs for components, either full FlowmakerPageVN or dedicated Vm

--- a/src2/flowmaker.web/Views/Home/Index.cshtml
+++ b/src2/flowmaker.web/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model Flowmaker.ViewModels.Views.HomepageVm;
+﻿@model Flowmaker.ViewModels.Views.FlowmakerPageVm;
 <vc:header />
-<div>Welcome to the @Model.Environment.Title</div>
-<h1>@Model.RequestRoute</h1>
-<h2>@Model.FlowTitle</h2>
+<h1>@Model.RequestPath</h1>
 <vc:footer />
