--- a/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
+++ b/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
@@ -1,20 +1,18 @@
-﻿@model Flowmaker.ViewModels.Components.EditorVm;
-<div id="fmEditor-CloseButton">
-    <span  onclick="openNav()">&#9776; open</span>
-</div>
-<div id="fmEditor">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    @Model.Environment.ProductTitle
-    <vc:login />
+﻿@model Flowmaker.ViewModels.Views.EditorVm;
+<sl-drawer label="@Model.Environment.ProductTitle" class="drawer-overview">
+    @Model.Environment.Title
+    <sl-button slot="footer" type="primary">Close</sl-button>
+</sl-drawer>
+<sl-button id="open">Open Drawer</sl-button>
+<div>
+    Total flows @Model.Flows.Count()
 </div>
 <script>
-    function openNav() {
-        document.getElementById("fmEditor").style.width = "250px";
-        document.getElementById("fmBody").style.marginRight = "250px";
-    }
-
-    function closeNav() {
-        document.getElementById("fmEditor").style.width = "0";
-        document.getElementById("fmBody").style.marginRight = "0";
-    }
+    (() => {
+        const drawer = document.querySelector('.drawer-overview');
+        const openButton = drawer.nextElementSibling;
+        const closeButton = drawer.querySelector('sl-button[type="primary"]');
+        openButton.addEventListener('click', () => drawer.show());
+        closeButton.addEventListener('click', () => drawer.hide());
+    })();
 </script>
