--- a/src2/flowmaker.web/Views/Home/Privacy.cshtml
+++ b/src2/flowmaker.web/Views/Home/Privacy.cshtml
@@ -1,4 +1,4 @@
 ﻿@model              Flowmaker.ViewModels.Views.PrivacyVm;
 <vc:header />
-<div>Use this page to detail your site's privacy policy for your @Model.Environment.WorkspaceTitle</div>
+<div>Use this page to detail your site's privacy policy for your @Model.Project.Title</div>
 <vc:footer />
