--- a/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
+++ b/src2/flowmaker.web/Views/Shared/_RuntimeLayout.cshtml
@@ -1,4 +1,4 @@
-﻿@model Flowmaker.ViewModels.ViewModelObject;
+﻿@model Flowmaker.ViewModels.Views.FlowmakerPageVm;
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@shoelace-style/shoelace@2.0.0-beta.18/dist/shoelace/shoelace.css">
     <script type="module" src="https://cdn.jsdelivr.net/npm/@@shoelace-style/shoelace@2.0.0-beta.18/dist/shoelace/shoelace.esm.js"></script>
-    <title>@Model.Environment.WorkspaceTitle</title>
+    <title>@Model.Title</title>
     <link rel="stylesheet" href="~/css/stylesheet.css" />
 </head>
 <body>
     <div id="fmContainer">
-        @if (!Model.Environment.IsAvailable)
+        @if (!Model.IsAvailable)
         {
             <vc:lonely />
             IgnoreBody();
         }
-        else if (Model.Environment.IsEditable)
+        else if (Model.IsEditable)
         {
             <vc:editor />
             <div id="fmBody">
