--- a/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
+++ b/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
@@ -7,6 +7,7 @@
             <li>@flow.Title</li>
         }
     </ul>
+    <vc:login/>
 </sl-drawer>
 <sl-button id="open">Open Drawer</sl-button>
 <script>
