Revised view model and removed the VM Servcies

--- a/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
+++ b/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
@@ -15,7 +15,7 @@
             <li>@flow.Title</li>
         }
     </ul>
-    @if (Model.Flow != null)
+    @if (Model.Flow.ViewPage != null)
     {
         <p>Page</p>
         @Model.Flow.ViewPage.Content
