--- a/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
+++ b/src2/Flowmaker.Web/Views/Shared/Components/Editor/Default.cshtml
@@ -1,27 +1,31 @@
 ﻿@model Flowmaker.ViewModels.Views.EditorVm;
 <sl-drawer label="@Model.Project.Title" class="drawer-overview">
+    <sl-tab-group placement="left">
+        <sl-tab slot="nav" panel="Environments">Environments</sl-tab>
+        <sl-tab slot="nav" panel="Page">Page</sl-tab>
+        <sl-tab  slot="nav" panel="Flows">Flows</sl-tab>
+        <sl-tab-panel name="Environments">
+            @foreach (var env in Model.Environments)
+            {
+                <p>@env.Title</p>
+            }
+        </sl-tab-panel>
+        <sl-tab-panel name="Page">
+            <p>@Model.Flow.ViewPage.Content</p>
+        </sl-tab-panel>
+        <sl-tab-panel name="Flows">
+            @foreach (var flow in Model.Flows)
+            {
+                <p>@flow.Title</p>
+            }
+        </sl-tab-panel>
+    </sl-tab-group>
     <sl-button slot="footer" type="primary">Close</sl-button>
-    <p>Env:</p>
-    <ul>
-        @foreach (var env in Model.Environments)
-        {
-            <li>@env.Title</li>
-        }
-    </ul>
-    <p>Flows:</p>
-    <ul>
-        @foreach (var flow in Model.Flows)
-        {
-            <li>@flow.Title</li>
-        }
-    </ul>
-    @if (Model.Flow.ViewPage != null)
-    {
-        <p>Page</p>
-        @Model.Flow.ViewPage.Content
-    }
 </sl-drawer>
 <sl-button id="open">Open Drawer</sl-button>
+<style>
+
+</style>
 <script>
     (() => {
         const drawer = document.querySelector('.drawer-overview');
