--- a/src2/flowmaker.web/wwwroot/css/stylesheet.css
+++ b/src2/flowmaker.web/wwwroot/css/stylesheet.css
@@ -10,11 +10,15 @@ body {
     color: #444545;
 }
 
-#fmContainer {
+/* https://github.com/shoelace-style/shoelace/blob/current/src/styles/shoelace.scss */
+:root {
+    /* Changes the primary color to a shade of orange at 90% saturation */
+    --sl-color-primary-hue: 30;
+    --sl-color-primary-saturation: 90%;
+}
 
+#fmContainer {
 }
 
 #fmBody {
-
 }
-
